# muxtunnel

./: .gitignore  DESIGN.md  FACTS.md  GOALS.md  HEURISTICS.md  PROMPT-bootstrap.md  PROMPT-mobile-input.md  PROMPT-pane-crop.md  PROMPT-pty-attachment.md  TODO.md  dev.sh  flake.nix  index.html  package-lock.json  package.json  progress-bootstrap.txt  progress-notifications.txt  progress-pane-crop.txt  progress-pty-attachment.txt  progress-tauri.txt  progress-transport.txt  prompt.md  spike-crop.html  tsconfig.build.json  tsconfig.json  vite.config.ts
knowledge/: 2026-02-08-tauri-v2-patterns.md  INDEX.md  research-spike-01-prior-art.md
launchd/: com.slee2.muxtunnel.plist
specs/: sidebar-toggle.md
src/: App.tsx  attention.ts  claude-sessions.ts  client.ts  main.tsx  mux-client.ts  pty.ts  resolver.ts  server.ts  session-order.ts  settings.ts  tmux.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude_sessions.rs  commands.rs  lib.rs  main.rs  pty_manager.rs  resolver.rs  session_order.rs  settings.rs  tmux.rs
src/components/: CommandPalette.tsx  InputBar.tsx  NotificationToast.tsx  Sidebar.tsx  TerminalView.tsx  WorkspaceBar.tsx
src/hooks/: useNotifications.ts  useSessionOrder.ts  useSessions.ts  useSettings.ts  useWebSocket.ts
src/transport/: index.ts  tauri.ts  types.ts  web.ts
